app/assets/stylesheets/normalise.css
* {
  box-sizing: border-box;
}

html, body {
  height: 100%;
  margin: 0;
  padding: 0;
  color: #000;
  text-align: center;
  background: #f1f1f1;
  font-family: Verdana,sans-serif;
  font-size: 13px;
  line-height: 1.5em;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}

body {
  min-width: 270px;
}

article,
aside,
footer,
header,
nav,
section {
  display: block;
}

h1, h2 {
  font-size: 1.25em;
  font-size-adjust: 0.75;
  -ms-text-size-adjust: 0.75;
  -webkit-text-size-adjust: 0.75;
  line-height: 1.06;
  text-shadow: 0 0.05em 0.03em rgba(0,0,0,0.3);
  font-weight: normal;
}
h1, .subheading {
  border-bottom: 1px solid rgba(0,0,150, 0.3);
}
h1 {
  padding-bottom: 15px;
}
h1, h1 a, h2, h2 a {
  color: rgb(102,102,184);
}
h3 {
 margin: 10px;
}

hr {
  height: 0;
  overflow: visible;
}

pre {
  font-family: monospace, monospace;
  font-size: 1em;
}

/* IE 10 IOS/Safari 8+ */
a {
  background-color: transparent; /* 1 */
  -webkit-text-decoration-skip: objects; /* 2 */
}

abbr[title] {
  border-bottom: none;
  text-decoration: underline;
  text-decoration: underline dotted;
}

/* IOS 4-7 */
audio:not([controls]) {
  display: none;
  height: 0;
}

/* IE */
textarea {
  overflow: auto;
}

/* IE9- */
audio,
video {
  display: inline-block;
}

/* IE10- */
[type="checkbox"], [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

/*Chrome*/
[type="checkbox"],
[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
}

[type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

[type="search"]::-webkit-search-cancel-button,
[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

details, menu {
  display: block;
}

summary {
  display: list-item;
}

canvas {
  display: inline-block;
}

template {
  display: none;
}

[hidden] {
  display: none;
}

a {
  color: #337287;
  font-weight: bold;
  outline: none;
}
h1 a, h2 a {
  text-decoration: none;
  font-weight: inherit;
}

p {
  margin: 0px;
  padding: 15px;
}
hr {
  display: block;
  border: none;
  padding: 0px;
  margin: 10px 0;
  border-bottom: solid 1px #ccc;
}
p.foot {
  border-top: solid 1px #ccc;
}

